--- a/Dossier de Projet de Recherche.tex
+++ b/Dossier de Projet de Recherche.tex
@@ -10,6 +10,7 @@
 \usepackage{url}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{array}% http://ctan.org/pkg/array
 \date{}
 \title{}
 \author{}
