added last modifs

--- a/1.EtatDeL'Art.tex
+++ b/1.EtatDeL'Art.tex
@@ -20,4 +20,4 @@ Ce n'est qu'en 2000 que J.W. Park et son équipe utiliseront une technique d'él
     \end{center}
 \end{figure}
 
-Cependant cette molécule n'est pas un aimant moléculaire, et il est donc impossible de se servir des propriétés quantiques liées au magnétisme moléculaire. Les équipes vont alors se tourner vers d'autres aimants moléculaires notamment Fe$_{4}$ (à Delft), Ni$_{4}$(à Cornell)...etc et la molécule TbPc$_{2}$ (molécule organique avec un atome de Terbium) à l'institut Louis Néel dans l'équipe de Franck Balestro. L'aimant moléculaire TbPc$_{2}$ utilisée dans un transistor à molécule unique a permis de réaliser la lecture électrique et la manipulation quantique d'un spin nucléaire unique.
+Cependant cette molécule n'est pas un aimant moléculaire, et il est donc impossible de se servir des propriétés quantiques liées au magnétisme moléculaire. Les équipes vont alors se tourner vers d'autres aimants moléculaires notamment Fe$_{4}$ (à Delft), Ni$_{4}$(à Cornell)...etc et la molécule TbPc$_{2}$ (molécule organique avec un atome de Terbium) à l'institut Louis Néel dans l'équipe de Franck Balestro. L'aimant moléculaire TbPc$_{2}$ utilisé dans un transistor à molécule unique a permis de réaliser la lecture électrique et la manipulation quantique d'un spin nucléaire unique.
