--- a/3.Realisation.tex
+++ b/3.Realisation.tex
@@ -1,4 +1,4 @@
-L'expérience que nous avons réalisé consiste donc à réaliser des transistors moléculaires, afin de caractériser leur comportement.
+L'expérience que nous avons réalisée consiste donc à réaliser des transistors moléculaires, afin de caractériser leur comportement.
 \section{La réalisation des circuits en salle blanche (faite en amont par Mr Balestro)}
 La réalisation des fils d'or prend plusieurs semaines ; c'est pourquoi Frank Balestro les avait déjà réalisés en salle blanche, au CNRS, avant l'expérience.
 Nous avons donc commencé la journée avec 3 plaques de Al$_2$O$_3$, avec chacune 4 groupes de 12 transistors non formés.
