--- a/Dossier de Projet de Recherche.tex
+++ b/Dossier de Projet de Recherche.tex
@@ -20,7 +20,7 @@
 \input{0.Couverture}
 
 \begin{abstract}
-L'équipe avec laquelle s'est effectuée notre projet de recherche est l'équipe Nanospintronique et Transport Moléculaire de l'institut Louis Néel. Et c'est en particulier Franck Balestro qui nous a encadrés lors de l'expérience et en amont de celle-ci.\\
+L'équipe avec laquelle s'est effectué notre projet de recherche est l'équipe Nanospintronique et Transport Moléculaire de l'institut Louis Néel. Et c'est en particulier Franck Balestro qui nous a encadré lors de l'expérience et en amont de celle-ci.\\
 \begin{figure}[h]
     \begin{center}
         \includegraphics[height=133px]{Images/Balestro-trim.jpg}
