--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -116,4 +116,9 @@
   year         = "",
   howpublished = "\url{http://www.lakeshore.com/products/Cryogenic-Probe-Stations/Pages/Cryogenic-Probe-Stations.aspx}",
 }
-  
+@misc{18,
+  title        = {Introduction à l'informatique quantique},
+  author       = "Bellac Le.",
+  year         = "2006",
+  howpublished = "\url{https://cel.archives-ouvertes.fr/cel-00092955/document}",
+}
