clean drawables and errors

--- a/1.EtatDeL'Art.tex
+++ b/1.EtatDeL'Art.tex
@@ -10,13 +10,12 @@ De nombreuses autres expériences vont suivre, et en 1997 apparaît la technique
 
 Ce n'est qu'en 2000 que J.W. Park et son équipe utiliseront une technique d'électromigration\footnote{Nous présentons plus en détail l'électromigration dans une partie dédiée.} pour permettre la fabrication du premier transistor à molécule unique avec une molécule de fullerène C$_{60}$. D'autres groupes vont alors utiliser cette même technique en utilisant d'autres molécules et leurs propriétés, et en particulier des aimants moléculaires (SMM) pour leurs propriétés liées au spin. Mais aussi en mettant en place des expériences qui permettront d'effectuer les mesures à quelques milliKelvins.
 
-\section{De nouvelles molécules: vers la spintronique moléculaire}En 2006 l'utilisation de SMM débute afin de permettre la réalisation de dispositifs de spintronique moléculaire. Les équipe de H.S.J Van der Sant (à Cornell) et D.C. Ralph (à Delft) vont étudier tout d'abord l'aimant moléculaire le plus fameux, Mn$_{12}$, mais les résultats sont peu satisfaisants et la première réalisation d'un véritable dispositif de spintronique moléculaire est réalisé à Delft par l'équipe de Ralph en 2008 à l'aide d'une molécule de N@C$_{60}$ (atome d'azote piégé dans une molécule de fullerène). Il est possible avec une telle molécule de retrouver dans les mesures de transport ses propriétés magnétiques.\\
+\section{De nouvelles molécules: vers la spintronique moléculaire}En 2006 l'utilisation de SMM débute afin de permettre la réalisation de dispositifs de spintronique moléculaire. Les équipe de H.S.J Van der Sant (à Cornell) et D.C. Ralph (à Delft) vont étudier tout d'abord l'aimant moléculaire le plus fameux, Mn$_{12}$, mais les résultats sont peu satisfaisants et la première réalisation d'un véritable dispositif de spintronique moléculaire est réalisé à Delft par l'équipe de Ralph en 2008 à l'aide d'une molécule de N@C$_{60}$ (atome d'azote piégé dans une molécule de fullerène). Il est possible avec une telle molécule de retrouver dans les mesures de transport ses propriétés magnétiques.\medskip 
 
 \begin{figure}[h]
     \begin{center}
-        \includegraphics{Images/TbPc2.jpg}
+        \includegraphics{Images/1_TbPc2.jpg}
         \caption{Vue de la molécule de TbPc$_2$, et schéma de principe.}
-        \label{fig:}
     \end{center}
 \end{figure}
 
