--- a/3.Realisation.tex
+++ b/3.Realisation.tex
@@ -4,14 +4,13 @@ La réalisation des fils d'or prend plusieurs semaines ; c'est pourquoi Frank Ba
 Nous avons donc commencé la journée avec 3 plaques de Al$_2$O$_3$, avec chacune 4 groupes de 12 transistors non formés.
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=250px]{Images/GroupeDeTransistors}
+        \includegraphics[width=250px]{Images/3_GroupeDeTransistors}
         \caption{Un groupe de transistors avec grille et source communes}
-        \label{fig:}
     \end{center}
 \end{figure}
 \section{Le dépôt de Fullerène}
 Nous sommes donc allés en salle propre de dépôt chimique afin de déposer sur ces plaques le Fullerène, en solution dans le Toluène.
-Cette solution, conservée dans un frigo, est parfaitement inerte, ce qui nous autorise à la conserver très longtemps: celle que nous avons utilisée date de 2009.\\
+Cette solution, conservée dans un frigo, est parfaitement inerte, ce qui nous autorise à la conserver très longtemps: celle que nous avons utilisée date de 2009.\medskip 
 
 Le dépôt se fait à l'aide d'une micropipette, et sous hotte aspirante afin d'éviter toute inhalation de fullerène et toute pollution de l'échantillon.
 La solution est assez faible en agrégats, et ceux qui ont pu se former se trouvent essentiellement à la surface et au fond de la solution. Nous sommes donc allés récupérer la solution au milieu du bécher.
@@ -29,9 +28,8 @@ L'argent est un très bon conducteur thermique et la laque d'argent permet d'avo
 De plus, l'argent nous permet d'avoir une bonne mise à la masse des échantillons et donc de minimiser les risques de chocs électriques qui risqueraient de détruire les jonctions formées.
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=250px]{Images/PhotoPlaqueTransistors}
+        \includegraphics[width=250px]{Images/3_PhotoPlaqueTransistors}
         \caption{Échantillon collé à l'aide de laque d'argent}
-        \label{fig:}
     \end{center}
 \end{figure}
 
@@ -44,10 +42,9 @@ Il nous faut donc transporter la bouteille d'hélium liquide vide jusqu'au centr
 La manipulation de la bouteille d'hélium doit se faire avec précaution. En effet, le haut de la bouteille est “chaud”, donc en cas de contact brusque avec l'hélium liquide, celui-ci se dilate très rapidement, ce qui transforme la bouteille d'hélium en “torpille”.
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=150px]{Photos/Bouteille_Helium_Liquide.jpg}
-        \includegraphics[width=150px]{Photos/Centre_Helium_Liquide.jpg}
+        \includegraphics[width=150px]{Images/3_Bouteille_Helium_Liquide.jpg}
+        \includegraphics[width=150px]{Images/3_Centre_Helium_Liquide.jpg}
         \caption{Une bouteille d'Hélium Liquide et le centre de liquéfaction.}
-        \label{fig:}
     \end{center}
 \end{figure}
 
@@ -60,9 +57,8 @@ Pour observer les diamants de Coulomb on mesure des faibles courant (nA), on sé
 
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[trim=0mm 0mm 80px 600px, clip, width=200px]{Photos/Branchements_ADWin.jpg}
+        \includegraphics[width=200px]{Images/3_Branchements_ADWin.jpg}
         \caption{Branchements de l'interface Adwin lors de l'électromigration, on peut voir sur la droite le convertisseur courant-tension}
-        \label{fig:}
     \end{center}
 \end{figure}
 
