--- a/4.Resultats.tex
+++ b/4.Resultats.tex
@@ -1,9 +1,8 @@
 \section{Électromigration}
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=150px]{Images/Image_Electromigration_1.png}
+        \includegraphics[width=150px]{Images/4_Image_Electromigration_1.png}
         \caption{La caractéristique R = f (V$_{ds}$)}
-        \label{fig:}
     \end{center}
 \end{figure}
 Pour la réalisation de l'électromigration, on applique une rampe de tension aux bornes du nanofil allant de 50mV à 2,5V avec une vitesse de 5mV/s.
@@ -14,15 +13,14 @@ La mobilité des atomes est activée par la température. Localement (au niveau 
 
 
 \section{Observation du blocage de Coulomb}
-Pour savoir si une molécule de C$_{60}$ est tombée dans le nanogap, On trace la caractéristique I(V) pour différentes valeurs de la tension de grille Vg. L'influence de la boite quantique produira différentes caractéristiques, au contraire les caractéristiques seront toutes confondues si le gap est vide.\\
+Pour savoir si une molécule de C$_{60}$ est tombée dans le nanogap, On trace la caractéristique I(V) pour différentes valeurs de la tension de grille Vg. L'influence de la boite quantique produira différentes caractéristiques, au contraire les caractéristiques seront toutes confondues si le gap est vide.\medskip 
 
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=0.49\textwidth]{Images/Image_Blocage_Coulomb_1.png}
-        \includegraphics[width=0.49\textwidth]{Images/Image_Blocage_Coulomb_2.png}
+        \includegraphics[width=0.49\textwidth]{Images/4_Image_Blocage_Coulomb_1.png}
+        \includegraphics[width=0.49\textwidth]{Images/4_Image_Blocage_Coulomb_2.png}
         \caption{Id=f(Vg), pour deux transistors différents}
          On observe bien des pics de Coulomb (ici il pourrait s'agir d'un unique pic), et leur symétrie.
-        \label{fig:}
     \end{center}
 \end{figure}
 
@@ -34,20 +32,20 @@ Malheureusement nous n'avons pas pu obtenir des diamants de Coulomb exploitables
 Après ces considérations générales étudions quelques cas particuliers, et plus précisément des observations obtenues lorsque des problèmes ont été rencontrés au cours de l'expérience.
 
 \begin{center}
-    \includegraphics[width=220px]{Images/Nanofil_Emdommage.png}\\
+    \includegraphics[width=220px]{Images/4_Nanofil_Emdommage.png}\\
     \textbf{Nanofil endommagé avant électromigration}
 \end{center}
-Dans ce cas, le nanofil a déjà été endommagé avec que l'on effectue l'électromigration. La résistance du fil est donc constante. Cependant, nous imposons une rampe de tension sur le nanofil avec le testeur sous pointe. On a d'après la loi d'Ohm R=U/I, donc si l'on impose une rampe de tension, on en aura une pour la résistance du nanofil. Ici, le transistor sera inutilisable.\\
+Dans ce cas, le nanofil a déjà été endommagé avec que l'on effectue l'électromigration. La résistance du fil est donc constante. Cependant, nous imposons une rampe de tension sur le nanofil avec le testeur sous pointe. On a d'après la loi d'Ohm R=U/I, donc si l'on impose une rampe de tension, on en aura une pour la résistance du nanofil. Ici, le transistor sera inutilisable.\medskip 
 
 
 \begin{center}
-    \includegraphics[width=220px]{Images/Grille_Endommagee.png}\\
+    \includegraphics[width=220px]{Images/4_Grille_Endommagee.png}\\
     \textbf{Grille endommagée avant électromigration}
 \end{center}
-On a toujours Id(Vg). On peut voir un fonctionnement de transistor, c'est à dire des pics de courants pour certaines valeurs de tension de grille mais on observe à partir d'une certaine valeur de Vg que le courant Id est toujours supérieur à 0. On a donc toujours un courant qui circule à travers la molécule. De plus, on observe beaucoup de bruit pour Vg supérieur à 4V. La grille est endommagée, le transistor ne fonctionnera pas normalement.\\
+On a toujours Id(Vg). On peut voir un fonctionnement de transistor, c'est à dire des pics de courants pour certaines valeurs de tension de grille mais on observe à partir d'une certaine valeur de Vg que le courant Id est toujours supérieur à 0. On a donc toujours un courant qui circule à travers la molécule. De plus, on observe beaucoup de bruit pour Vg supérieur à 4V. La grille est endommagée, le transistor ne fonctionnera pas normalement.\medskip 
 
 \begin{center}
-    \includegraphics[width=220px]{Images/Grille_Detruite.png}\\
+    \includegraphics[width=220px]{Images/4_Grille_Detruite.png}\\
     \textbf{Grille détruite (au delà de Vg=7V on détruit la grille)}
 \end{center}
-Quand on applique une tension trop grande à la grille, celle-ci claque. On n'a plus aucun contrôle sur le transistor à molécule unique. On a passage du courant quand Vg=0, sinon il n'y a pas de courant qui passe par le drain.\\
+Quand on applique une tension trop grande à la grille, celle-ci claque. On n'a plus aucun contrôle sur le transistor à molécule unique. On a passage du courant quand Vg=0, sinon il n'y a pas de courant qui passe par le drain.
