--- a/5.AllerPlusLoin.tex
+++ b/5.AllerPlusLoin.tex
@@ -6,9 +6,8 @@ Les contacts par pointes sont aussi remplacés par des micro-soudures qui possè
 
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=150px]{Photos/Refrigerateur_Dillution.png}
+        \includegraphics[width=150px]{Images/5_Refrigerateur_Dillution.jpg}
         \caption{Photographie du réfrigérateur à dilution et de l'ensemble du banc de mesure}
-        \label{fig:}
     \end{center}
 \end{figure}
 
