--- a/6.Conclusion.tex
+++ b/6.Conclusion.tex
@@ -1,4 +1,4 @@
-Durant ce projet de recherche, nous avons vu comment réaliser un transistor de type SET (Single Electron Transistor) à l'aide d'une molécule de fullerène. Cette idée de créer des transistors à partir de molécules organiques est apparu dans les années 1970. Ce n'est seulement que dans les années 1990 que nous verrons l'apparition des premiers transistors à molécule unique.\\
+Durant ce projet de recherche, nous avons vu comment réaliser un transistor de type SET (Single Electron Transistor) à l'aide d'une molécule de fullerène. Cette idée de créer des transistors à partir de molécules organiques est apparu dans les années 1970. Ce n'est seulement que dans les années 1990 que nous verrons l'apparition des premiers transistors à molécule unique. \medskip 
 
 La réalisation d'un tel transistor se fait évidement en plusieurs étapes:
 
